--- a/src/MusicPlayerOnline.Maui/Pages/LogPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/LogPage.xaml
@@ -2,8 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="MusicPlayerOnline.Maui.LogPage"
-             Title="日志">
+             x:Class="MusicPlayerOnline.Maui.Pages.LogPage"
+             Title="日志"
+             BackgroundColor="#F7F7F7">
 
     <StackLayout Margin="16">
         <StackLayout Margin="0,0,0,20"
