--- a/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/RegisterPage.xaml
@@ -1,63 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MusicPlayerOnline.Maui.RegisterPage"
-             Title="注册">
+             x:Class="MusicPlayerOnline.Maui.Pages.RegisterPage"
+             Title="注册"
+             BackgroundColor="#F7F7F7">
 
-    <Grid Margin="16"
-          ColumnDefinitions="{OnPlatform Default=*, UWP=400,MacCatalyst=400}">
-        <StackLayout 
-                     HeightRequest="40"
+    <StackLayout Margin="16"
+                 MaximumWidthRequest="{OnPlatform  UWP=400,MacCatalyst=400}">
+
+        <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
             <Label Text="新用户注册"
-                   VerticalOptions="Start"
+                   VerticalTextAlignment="Center"
                    Style="{StaticResource Title}"/>
-
-            <ActivityIndicator IsRunning="{Binding IsBusy}"
-                               HeightRequest="16"
-                               WidthRequest="16"
-                               HorizontalOptions="Start"
-                               VerticalOptions="Start"
-                               Margin="20,0,20,0"/>
+            <ActivityIndicator Margin="10,0,0,0"
+                               IsRunning="{Binding IsBusy}"
+                               HeightRequest="20"
+                               WidthRequest="20"
+                               VerticalOptions="CenterAndExpand"/>
         </StackLayout>
 
-        <Entry Text="{Binding Username}"
+        <StackLayout>
+            <Entry Text="{Binding Username}"
                        Placeholder="请输入用户名"
                        Margin="0,10,0,10"/>
-        <Entry Text="{Binding Nickname}"
+            <Entry Text="{Binding Nickname}"
                        Placeholder="请输入昵称" 
                        Margin="0,0,0,10"/>
-        <Entry Text="{Binding Password}"
+            <Entry Text="{Binding Password}"
                        Placeholder="密码"
                        IsPassword="True"
                        Margin="0,0,0,10"/>
-        <Entry Text="{Binding Password2}"
+            <Entry Text="{Binding Password2}"
                        Placeholder="确认密码"
                        IsPassword="True"
                        Margin="0,0,0,10"/>
-        <HorizontalStackLayout Margin="0,0,0,10">
-            <Label Text="头像"
+            <HorizontalStackLayout Margin="0,0,0,10">
+                <Label Text="头像"
                    VerticalTextAlignment="Center"
                    Margin="0,0,10,0"/>
-            <Image Source="{Binding MyImage}"
+                <Image Source="{Binding MyImage}"
                    WidthRequest="48"
                    Margin="0,0,10,0"/>
-            <Button Text="选择"
+                <Button Text="选择"
                     IsEnabled="{Binding IsNotBusy}"
                     Command="{Binding ChoseImageCommand}"/>
-        </HorizontalStackLayout>
+            </HorizontalStackLayout>
 
-        <Label Text="{Binding ApiMessage}"
+            <Label Text="{Binding ApiMessage}"
                Margin="0,10,0,0"/>
 
-        <Button Text="注册"
+            <Button Text="注册"
                 Margin="0,20,0,0"
                 IsEnabled="{Binding IsNotBusy}"
                 Command="{Binding RegisterCommand}"/>
-        <Button Text="返回"
+            <Button Text="返回"
                 Margin="0,5,0,0"
                 IsEnabled="{Binding IsNotBusy}"
                 Command="{Binding GoBackCommand}"/>
-    </Grid>
+        </StackLayout>
+    </StackLayout>
 </ContentPage>
