--- a/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/SettingsPage.xaml
@@ -7,146 +7,150 @@
              Title="设置"
              BackgroundColor="#F7F7F7">
 
-    <StackLayout Margin="16"
-                 MaximumWidthRequest="{OnPlatform  UWP=400,MacCatalyst=400}">
+    <StackLayout Margin="16">
 
-        <StackLayout Margin="0,0,0,20"
+        <StackLayout VerticalOptions="FillAndExpand"
+                     MaximumWidthRequest="{OnPlatform  UWP=400,MacCatalyst=400}">
+
+            <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
-            <Label Text="我的"
+                <Label Text="我的"
                    VerticalTextAlignment="Center"
                    Style="{StaticResource Title}"/>
-            <ActivityIndicator Margin="10,0,0,0"
+                <ActivityIndicator Margin="10,0,0,0"
                                IsRunning="{Binding IsBusy}"
                                HeightRequest="20"
                                WidthRequest="20"
                                VerticalOptions="CenterAndExpand"/>
-        </StackLayout>
+            </StackLayout>
 
-        <ScrollView VerticalOptions="FillAndExpand">
-            <StackLayout>
+            <ScrollView VerticalOptions="FillAndExpand">
+                <StackLayout>
 
-                <!--用户模块-->
-                <!--未登录-->
-                <StackLayout VerticalOptions="Start"
-                             IsVisible="{Binding UserInfo, Converter={StaticResource IsEqualConverter}}">
-                    <Button Text="登录/注册 >"
-                            WidthRequest="100"
-                            BackgroundColor="Transparent"
-                            BorderWidth="0"
-                            HorizontalOptions="StartAndExpand"
-                            Command="{Binding GoToLoginCommand}"/>
-                </StackLayout>
-                <!--已登录-->
-                <StackLayout VerticalOptions="Start"
+                    <!--用户模块-->
+                    <!--未登录-->
+                    <StackLayout VerticalOptions="Start"
+                                 IsVisible="{Binding UserInfo, Converter={StaticResource IsEqualConverter}}">
+                        <Button Text="登录/注册 >"
+                                FontSize="17"
+                                WidthRequest="120"
+                                BackgroundColor="Transparent"
+                                BorderWidth="0"
+                                HorizontalOptions="StartAndExpand"
+                                Command="{Binding GoToLoginCommand}"/>
+                    </StackLayout>
+                    <!--已登录-->
+                    <StackLayout VerticalOptions="Start"
                              Orientation="Horizontal"
                              IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}">
-                    <Image Source="{Binding UserInfo.Avatar}"
+                        <Image Source="{Binding UserInfo.Avatar}"
                            Aspect="AspectFill"
                            WidthRequest="64"
                            HeightRequest="64"
                            VerticalOptions="Center"
                            HorizontalOptions="Center"/>
 
-                    <StackLayout Margin="10,0,0,0"
+                        <StackLayout Margin="10,0,0,0"
                                  HeightRequest="64">
-                        <Label Margin="0,5,0,0"
+                            <Label Margin="0,5,0,0"
                                Text="{Binding UserInfo.Nickname}"
                                VerticalOptions="Start"/>
-                        <Label Margin="0,0,0,5"
+                            <Label Margin="0,0,0,5"
                                Text="{Binding UserInfo.Username,StringFormat='{}用户名：{0}'}"
                                VerticalOptions="EndAndExpand"/>
+                        </StackLayout>
                     </StackLayout>
-                </StackLayout>
 
-                <!--设置模块-->
-                <StackLayout Margin="0,20,0,0">
-                    <Label Text="设置"
+                    <!--设置模块-->
+                    <StackLayout Margin="0,20,0,0">
+                        <Label Text="设置"
                            Margin="0,0,0,20"/>
 
-                    <!-- 常规设置 -->
-                    <Label Text="常规" 
+                        <!-- 常规设置 -->
+                        <Label Text="常规" 
                            FontAttributes="Bold"/>
 
-                    <controls:SwitchEx Text="启动时检查更新"
+                        <controls:SwitchEx Text="启动时检查更新"
                                        IsToggled="{Binding IsAutoCheckUpdate}">
-                    </controls:SwitchEx>
-                    <controls:SwitchEx Text="深色主题"
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="深色主题"
                                        IsToggled="{Binding IsDarkMode}">
-                    </controls:SwitchEx>
+                        </controls:SwitchEx>
 
-                    <!-- 搜索设置 -->
-                    <Label Text="搜索" 
+                        <!-- 搜索设置 -->
+                        <Label Text="搜索" 
                            FontAttributes="Bold"/>
-                    <controls:SwitchEx Text="网易云音乐"
+                        <controls:SwitchEx Text="网易云音乐"
                                        IsToggled="{Binding IsEnableNetEase}">
-                    </controls:SwitchEx>
-                    <controls:SwitchEx Text="酷狗音乐"
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="酷狗音乐"
                                        IsToggled="{Binding IsEnableKuGou}">
-                    </controls:SwitchEx>
-                    <controls:SwitchEx Text="咪咕音乐"
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="咪咕音乐"
                                        IsToggled="{Binding IsEnableMiGu}">
-                    </controls:SwitchEx>
-                    <controls:SwitchEx Text="隐藏小于1分钟的歌曲"
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="隐藏小于1分钟的歌曲"
                                        IsToggled="{Binding IsHideShortMusic}">
-                    </controls:SwitchEx>
+                        </controls:SwitchEx>
 
-                    <!-- 播放设置 -->
-                    <Label Text="播放" 
+                        <!-- 播放设置 -->
+                        <Label Text="播放" 
                            FontAttributes="Bold"/>
 
-                    <controls:SwitchEx Text="仅在WIFI下播放未缓存的歌曲"
+                        <controls:SwitchEx Text="仅在WIFI下播放未缓存的歌曲"
                                        IsToggled="{Binding IsWifiPlayOnly}">
-                    </controls:SwitchEx>
-                    <controls:SwitchEx Text="播放失败时自动跳到下一首"
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="播放失败时自动跳到下一首"
                                        IsToggled="{Binding IsAutoNextWhenFailed}">
-                    </controls:SwitchEx>
-                    <controls:SwitchEx Text="播放我的歌单前清空播放列表"
+                        </controls:SwitchEx>
+                        <controls:SwitchEx Text="播放我的歌单前清空播放列表"
                                        IsToggled="{Binding IsCleanPlaylistWhenPlayMyFavorite}">
-                    </controls:SwitchEx>
-                </StackLayout>
+                        </controls:SwitchEx>
+                    </StackLayout>
 
-                <!--其它模块-->
-                <StackLayout Margin="0,20,0,0">
-                    <Button Text="日志管理"
+                    <!--其它模块-->
+                    <StackLayout Margin="0,20,0,0">
+                        <Button Text="日志管理"
                             Margin="0,0,0,5"
                             Command="{Binding GoToLogCommand}"/>
-                    <Button Text="歌曲缓存"
+                        <Button Text="歌曲缓存"
                             Command="{Binding GoToCacheCleanCommand}"/>
-                    <Button Text="退出账号" 
+                        <Button Text="退出账号" 
                             Margin="0,10,0,0"
                             IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}"
                             IsEnabled="{Binding IsNotBusy}"
                             Command="{Binding LogoutCommand}"/>
-                    <BoxView Margin="0,10,0,10"
+                        <BoxView Margin="0,10,0,10"
                              HeightRequest="1"/>
 
-                    <!-- 关于 -->
-                    <StackLayout>
-                        <Label Text="在线音乐助手" TextColor="#FFFFFF" FontSize="18" HorizontalOptions="CenterAndExpand"/>
-                        <Label Text="{Binding VersionName, StringFormat='{}版本：{0}'}" TextColor="#FFFFFF" FontSize="14" HorizontalOptions="CenterAndExpand"/>
+                        <!-- 关于 -->
+                        <StackLayout>
+                            <Label Text="在线音乐助手" TextColor="#FFFFFF" FontSize="18" HorizontalOptions="CenterAndExpand"/>
+                            <Label Text="{Binding VersionName, StringFormat='{}版本：{0}'}" TextColor="#FFFFFF" FontSize="14" HorizontalOptions="CenterAndExpand"/>
 
-                        <Label Text="本软件基于GPL-3.0协议，开源、免费" TextColor="#727272" FontSize="14" HorizontalOptions="CenterAndExpand" Margin="0,10,0,0"/>
-                        <Label Text="作者：九零" TextColor="#727272" FontSize="14" HorizontalOptions="CenterAndExpand"/>
-                        <Label TextColor="#727272" FontSize="14" HorizontalOptions="CenterAndExpand">
-                            <Label.FormattedText>
-                                <FormattedString>
-                                    <Span Text="GitHub"
+                            <Label Text="本软件基于GPL-3.0协议，开源、免费" TextColor="#727272" FontSize="14" HorizontalOptions="CenterAndExpand" Margin="0,10,0,0"/>
+                            <Label Text="作者：九零" TextColor="#727272" FontSize="14" HorizontalOptions="CenterAndExpand"/>
+                            <Label TextColor="#727272" FontSize="14" HorizontalOptions="CenterAndExpand">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="GitHub"
                                       TextColor="Blue"
                                       TextDecorations="Underline">
-                                        <Span.GestureRecognizers>
-                                            <TapGestureRecognizer Command="{Binding OpenUrlCommand}"
+                                            <Span.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding OpenUrlCommand}"
                                                               CommandParameter="https://github.com/JiuLing-zhang/MusicPlayerOnline" />
-                                        </Span.GestureRecognizers>
-                                    </Span>
-                                </FormattedString>
-                            </Label.FormattedText>
-                        </Label>
+                                            </Span.GestureRecognizers>
+                                        </Span>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
                     </StackLayout>
                 </StackLayout>
-            </StackLayout>
-        </ScrollView>
+            </ScrollView>
 
+        </StackLayout>
         <controls:Player x:Name="player"
                          Margin="0,20,0,0"
                          VerticalOptions="End" >
